[project]
name = "qwen-tts-webui"
version = "0.1.0"
description = "Qwen3-TTS WebUI - カスタムボイス音声合成ツール"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.30.0",
    "qwen-tts>=0.1.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "rocm-sdk-core",
    "rocm-sdk-devel",
    "rocm-sdk-libraries-custom",
    "rocm",
]

[project.optional-dependencies]
flash-attn = ["flash-attn>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
rocm-sdk-core = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_core-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm-sdk-devel = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_devel-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm-sdk-libraries-custom = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_libraries_custom-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm-7.2.0.dev0.tar.gz" }

# CPU版PyTorchを使用する場合:
#   uv sync --index-url https://download.pytorch.org/whl/cpu
#
# CUDA 12.4版PyTorchを使用する場合:
#   uv pip install torch --index-url https://download.pytorch.org/whl/cu124
#
# ROCm版PyTorchを使用する場合:
#   uv pip install torch --index-url https://download.pytorch.org/whl/rocm6.3
